force-app/main/default/objects/clofor_com_cfs__OtherVAT__c/fields/clofor_com_cfs__AmountOtherCostInclTaxVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOtherCostInclTaxVAT__c</fullName>
    <label>AMOUNT OTHER COST INCL TAX-VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>