force-app/main/default/objects/clofor_com_cfs__OtherVAT__c/fields/clofor_com_cfs__AmountTaxOtherRevFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountTaxOtherRevFormu__c</fullName>
    <formula>clofor_com_cfs__OtherRevenueCostID__r.clofor_com_cfs__AmountOfTaxOtherRevenue__c</formula>
    <label>AMOUNT OF TAX-OTHER REV-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>